--- a/timepill/.classpath
+++ b/timepill/.classpath
@@ -3,27 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/annotations-api.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/catalina.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/catalina-ant.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/catalina-ha.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/catalina-tribes.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/ecj-4.4.2.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/el-api.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/jasper.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/jasper-el.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/tomcat7-websocket.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/tomcat-api.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/tomcat-coyote.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/tomcat-dbcp.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/tomcat-i18n-es.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/tomcat-i18n-fr.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/tomcat-i18n-ja.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/tomcat-jdbc.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/tomcat-util.jar"/>
-	<classpathentry kind="lib" path="G:/tomcat7/apache-tomcat-7.0.69/lib/websocket-api.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/c3p0-0.9.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/common-annotations.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
@@ -48,7 +29,5 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-commercial-5.1.25-bin.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/standard-1.1.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/tools.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
