--- a/timepill/WebContent/WEB-INF/web.xml
+++ b/timepill/WebContent/WEB-INF/web.xml
@@ -4,23 +4,6 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
 	<display-name>timepill</display-name>
-
-	<servlet>
-		<servlet-name>register</servlet-name>
-		<servlet-class>com.dingfeng.servlet.RegisterServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>register</servlet-name>
-		<url-pattern>/register</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<servlet-name>login</servlet-name>
-		<servlet-class>com.dingfeng.servlet.LoginServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>login</servlet-name>
-		<url-pattern>/login</url-pattern>
-	</servlet-mapping>
 	<!-- 过滤中文乱码的问题 -->
 	<filter>
 		<filter-name>encodingfilter</filter-name>
@@ -34,6 +17,23 @@
 		<filter-name>encodingfilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
+	<servlet>
+		<servlet-name>registerServlet</servlet-name>
+		<servlet-class>com.dingfeng.servlet.RegisterServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>registerServlet</servlet-name>
+		<url-pattern>/registerServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>login</servlet-name>
+		<servlet-class>com.dingfeng.servlet.LoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>login</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
